crates/snapshot-tests/tests/snapshots/parser__bad_table_names__trailing_period.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[Wanted]: expected a table key, found a right bracket at `a`
  ┌─ trailing_period:1:4
  │
1 │ [a.]
  │    ^ expected a table key


error: expected a table key, found a right bracket at `a`
 --> trailing_period:1:4
  |
1 | [a.]
  |    ^ expected a table key
Error {
    kind: "Wanted",
    message: "expected a table key, found a right bracket",
    span: 3..4,
    path: Some(
        "a",
    ),
}
